# openhuman

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MVP.md  PLAN.md  PR_DESCRIPTION.md  README.md  Referral-doc.md  SECURITY.md  TODO.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  scratch.js  tailwind.config.js  teams-api-reference.md  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
app/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.sidecar.plist  main.desktop  tauri.conf.json
app/src-tauri/capabilities/: default.json  webview-accounts.json
app/src-tauri/permissions/: allow-app-update.toml  allow-core-process.toml  allow-webview-recipe.toml
app/src-tauri/recipes/browserscan/: manifest.json  recipe.js
app/src-tauri/recipes/discord/: manifest.json  recipe.js
app/src-tauri/recipes/gmail/: recipe.js
app/src-tauri/recipes/google-meet/: agent.js  manifest.json  recipe.js
app/src-tauri/recipes/linkedin/: manifest.json  recipe.js
app/src-tauri/recipes/slack/: manifest.json  recipe.js
app/src-tauri/recipes/telegram/: manifest.json  recipe.js
app/src-tauri/recipes/whatsapp/: manifest.json  recipe.js
app/src-tauri/recipes/zoom/: manifest.json  recipe.js
app/src-tauri/skills_data/: skill-preferences.json  webhook_routes.json
app/src-tauri/src/: cef_preflight.rs  cef_profile.rs  core_process.rs  core_process_tests.rs  core_rpc.rs  core_update.rs  dictation_hotkeys.rs  file_logging.rs  lib.rs  main.rs  mascot_native_window.rs  memory.rs  openhuman_daemon.rs  process_kill.rs  process_recovery.rs  python.rs  window_state.rs
app/src-tauri/src/cdp/: conn.rs  emulation.rs  input.rs  mod.rs  session.rs  snapshot.rs  target.rs
app/src-tauri/src/cdp_indexeddb/: dom_scan.js  force_extractable.js  mod.rs  scanner.js  worker_hook.js  worker_spy.js
app/src-tauri/src/commands/: chat.rs  conscious_loop.rs  core_relay.rs  daemon_host.rs  mod.rs  openhuman.rs
app/src-tauri/src/discord_scanner/: dom_snapshot.rs  mod.rs
app/src-tauri/src/fake_camera/: mod.rs
app/src-tauri/src/gmail/: atom.rs  cdp_fetch.rs  mod.rs  notify_poll.rs  print_view.rs  reads.rs  session.rs  types.rs  writes.rs
app/src-tauri/src/gmail_scanner/: idb.rs  mod.rs
app/src-tauri/src/gmessages_scanner/: cdp_walk.rs  idb.rs  mod.rs
app/src-tauri/src/imessage_scanner/: chatdb.rs  mod.rs  tick.rs
app/src-tauri/src/meet_audio/: audio_bridge.js  caption_listener.rs  captions_bridge.js  inject.rs  listen_capture.rs  mod.rs  speak_pump.rs
app/src-tauri/src/meet_call/: mod.rs
app/src-tauri/src/meet_scanner/: mod.rs
app/src-tauri/src/meet_video/: camera_bridge.js  inject.rs  mod.rs
app/src-tauri/src/native_notifications/: mod.rs
app/src-tauri/src/notification_settings/: mod.rs
app/src-tauri/src/screen_capture/: mod.rs
app/src-tauri/src/services/: mod.rs
app/src-tauri/src/slack_scanner/: dom_snapshot.rs  extract.rs  idb.rs  mod.rs
app/src-tauri/src/telegram_scanner/: dom_snapshot.rs  extract.rs  idb.rs  mod.rs
app/src-tauri/src/utils/: dev_paths.rs  mod.rs
app/src-tauri/src/webview_accounts/: audio_tap.rs  call_session.rs  mod.rs  runtime.js  ua_spoof.js
app/src-tauri/src/webview_apis/: mod.rs  router.rs  server.rs
app/src-tauri/src/whatsapp_scanner/: dom_snapshot.rs  idb.rs  idb_tests.rs  mod.rs  scanner.js
rust-core/: Cargo.toml
rust-core/src/: core_server.rs
rust-core/src/core_server/: cli.rs  helpers.rs  mod.rs  server.rs  tests.rs  types.rs
rust-core/src/core_server/dispatch/: ai_rpc.rs  core.rs  memory.rs  mod.rs
rust-core/src/memory/: db.rs  extraction.rs  ingestion.rs  mod.rs
rust-core/src/openhuman/: mod.rs
rust-core/src/openhuman/accessibility/: mod.rs
rust-core/src/openhuman/agent/: loop_.rs
rust-core/src/openhuman/autocomplete/: mod.rs
rust-core/src/openhuman/channels/: telegram.rs
rust-core/src/openhuman/config/: mod.rs
rust-core/src/openhuman/local_ai/: mod.rs
rust-core/src/openhuman/screen_intelligence/: mod.rs
rust-core/src/openhuman/security/: landlock.rs  pairing.rs
rust-core/src/openhuman/service/: mod.rs
rust-core/src/runtime/: manifest.rs  mod.rs  qjs_engine.rs  qjs_skill_instance.rs  socket_manager.rs
rust-core/src/runtime/bridge/: db.rs  log_bridge.rs  net.rs  skills_bridge.rs  tauri_bridge.rs
rust-core/src/runtime/quickjs_libs/: bootstrap.js  storage.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/ai/: AGENTS.md  BOOTSTRAP.md  CONSCIOUS_LOOP.md  IDENTITY.md
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-tdlib-from-source.sh  bundle-tdlib-macos.sh
src-tauri/src/: core_process.rs  core_rpc.rs  core_server.rs  lib.rs  main.rs
src-tauri/src/ai/: encryption.rs  memory_fs.rs  sessions.rs
src-tauri/src/alphahuman/: identity.rs  migration.rs  mod.rs  multimodal.rs  util.rs
src-tauri/src/auth/: mod.rs  openai_oauth.rs  profiles.rs
src-tauri/src/commands/: alphahuman.rs  auth.rs  chat.rs  conscious_loop.rs  memory.rs  mod.rs  model.rs  openhuman.rs  runtime.rs  socket.rs  tdlib.rs  telegram.rs  unified_skills.rs  window.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/models/: auth.rs  mod.rs  socket.rs
src-tauri/src/openhuman/: migration.rs  mod.rs  multimodal.rs  util.rs
src-tauri/src/openhuman_daemon/: mod.rs
src-tauri/src/runtime/: cron_scheduler.rs  loader.rs  manifest.rs  mod.rs  ping_scheduler.rs  preferences.rs  qjs_engine.rs  qjs_skill_instance.rs  registry.rs  skill_registry.rs  socket_manager.rs  types.rs  v8_engine.rs  v8_skill_instance.rs
src-tauri/src/services/: mod.rs  notification_service.rs  session_service.rs  socket_service.rs
src-tauri/src/standalone/: openhuman-cli.rs  openhuman-core.rs
src-tauri/src/unified_skills/: generator.rs  llm_generator.rs  mod.rs  openclaw_executor.rs  self_evolve.rs
src-tauri/src/utils/: config.rs
(+3169 files in other folders)
