[package]
name = "OpenHuman"
version = "0.52.20"
description = "OpenHuman - AI-powered Super Assistant"
authors = ["OpenHuman"]
edition = "2021"
default-run = "OpenHuman"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openhuman"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "OpenHuman"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
# Tauri core and plugins.
#
# Default build uses the stock `wry` backend (WKWebView on macOS, WebView2 on
# Windows, WebKitGTK on Linux). Passing `--features cef` swaps the runtime to
# CEF (Chromium Embedded Framework) via `tauri-runtime-cef` — the `[patch.
# crates-io]` block at the bottom of this file pins every tauri crate and
# plugin to the `feat/cef` branch on github so CEF symbols are even in scope.
# Keeping `cef` optional lets contributors without the CEF binaries still run
# `yarn tauri dev` on the wry backend.
tauri = { version = "2.10", default-features = false, features = [
    "common-controls-v6",
    "macos-private-api",
    "tray-icon",
    "unstable",
] }
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "time", "net"] }
# WebSocket client for the Chrome DevTools Protocol (used to talk to the
# embedded CEF instance over `--remote-debugging-port=9222` and read
# IndexedDB / drive `Runtime.evaluate` for the WhatsApp recipe).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"

log = "0.4"
env_logger = "0.11"

# Direct CEF + tauri-runtime-cef dependencies (used only with `--features cef`).
# `tauri-runtime-cef::notification::register` is how we hook native Web
# Notification interception per webview, and `cef::Browser` is what we downcast
# from the boxed handle returned by `Webview::with_webview`. tauri-runtime-cef
# isn't published to crates.io — we vendor the whole tauri fork as a submodule
# at `vendor/tauri-cef` and reference the crate by path.
tauri-runtime-cef = { path = "vendor/tauri-cef/crates/tauri-runtime-cef", optional = true }
cef = { version = "=146.4.1", default-features = false, optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3.2"

[features]
# Default runtime is wry (OS-native webview). The `cef` feature swaps in CEF
# (bundled Chromium). The two are mutually exclusive — the `feat/cef` branch
# re-exports `webview_version` from both runtime crates without cfg gates, so
# enabling both at once fails to compile. Users opt into CEF with
# `--no-default-features --features cef`.
default = ["wry"]
wry = ["tauri/wry"]
cef = ["tauri/cef", "tauri/devtools", "dep:tauri-runtime-cef", "dep:cef"]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
sandbox-bubblewrap = []

[patch.crates-io]
# CEF support lives on the `feat/cef` branch of tauri-apps/tauri. We carry our
# own fork at tinyhumansai/tauri-cef on `feat/cef-notification-intercept` which
# adds native Web Notifications interception — `tauri-runtime-cef::notification`
# (browser-process callback registry) plus `cef-helper` patching `window.Notification`
# and `ServiceWorkerRegistration.prototype.showNotification` from the renderer
# side. The fork is vendored as a git submodule at `vendor/tauri-cef`; the
# submodule's recorded commit is the pin.
#
# Plugins still patch from upstream tauri-apps/plugins-workspace@feat/cef — the
# fork is tauri-only.
tauri = { path = "vendor/tauri-cef/crates/tauri" }
tauri-build = { path = "vendor/tauri-cef/crates/tauri-build" }
tauri-utils = { path = "vendor/tauri-cef/crates/tauri-utils" }
tauri-macros = { path = "vendor/tauri-cef/crates/tauri-macros" }
tauri-runtime = { path = "vendor/tauri-cef/crates/tauri-runtime" }
tauri-runtime-wry = { path = "vendor/tauri-cef/crates/tauri-runtime-wry" }
tauri-plugin = { path = "vendor/tauri-cef/crates/tauri-plugin" }

# Pinned to a specific commit on plugins-workspace@feat/cef so fresh
# dependency resolution (without Cargo.lock) is reproducible and doesn't
# silently drift when upstream pushes to the branch.
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "c6561ab6b4f9e7f650d4fc8c53fd8acc9b65b9b2" }
tauri-plugin-deep-link = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "c6561ab6b4f9e7f650d4fc8c53fd8acc9b65b9b2" }
tauri-plugin-global-shortcut = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "c6561ab6b4f9e7f650d4fc8c53fd8acc9b65b9b2" }
tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "c6561ab6b4f9e7f650d4fc8c53fd8acc9b65b9b2" }

# Fast CI builds: trade runtime perf for compile speed
[profile.ci]
inherits = "release"
opt-level = 1
codegen-units = 16
lto = false
incremental = false
strip = true
debug = false
